WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244531
Fix typo: contenfulPaintDetected should be contentfulPaintDetected
https://bugs.webkit.org/show_bug.cgi?id=244531
Summary
Fix typo: contenfulPaintDetected should be contentfulPaintDetected
Rob Buis
Reported
2022-08-30 02:44:48 PDT
The
Attachments
Patch
(5.69 KB, patch)
2022-08-30 02:46 PDT
,
Rob Buis
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2022-08-30 02:46:02 PDT
Created
attachment 462004
[details]
Patch
Nikolas Zimmermann
Comment 2
2022-08-30 04:12:34 PDT
Comment on
attachment 462004
[details]
Patch r=me
EWS
Comment 3
2022-08-30 05:03:40 PDT
Committed
253937@main
(d51fb373fe81): <
https://commits.webkit.org/253937@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 462004
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-08-30 05:04:16 PDT
<
rdar://problem/99325869
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug