Fix typo: contenfulPaintDetected should be contentfulPaintDetected https://bugs.webkit.org/show_bug.cgi?id=244531

Reviewed by Nikolas Zimmermann.

* Source/WebCore/platform/graphics/GraphicsContext.h:
(WebCore::GraphicsContext::contentfulPaintDetected const):
(WebCore::GraphicsContext::contenfulPaintDetected const): Deleted.
* Source/WebCore/rendering/ContentfulPaintChecker.cpp:
(WebCore::ContentfulPaintChecker::qualifiesForContentfulPaint):
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):
* Source/WebCore/rendering/RenderHTMLCanvas.cpp:
(WebCore::RenderHTMLCanvas::paintReplaced):
* Source/WebCore/rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayerContents):

Canonical link: https://commits.webkit.org/253937@main